# zed-save-depth

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
